<resources>
    <string name="app_name" translatable="false">Sellit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_saved_tasks" translatable="false">SavedTasksActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="deleted">Deleted</string>
    <string name="post_saved">Item saved successfully</string>
    <string name="post_added">Item Added!</string>
    <string name="post_deleted">Item Deleted!</string>
    <string name="loading">Loading...</string>
    <string name="login_successful">Login successful</string>
    <string name="add_profile_photo">Tap the photo to add a profile photo</string>
    <string name="registration_successful">Registration successful</string>
    <string name="required">Please enter all the fields</string>
    <string name="confirm_exit">Please confirm</string>
    <string name="are_you_sure_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_post_title">Title</string>
    <string name="enter_post_description">Description</string>
    <string name="add_post">Add Item</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account yet? Click to register</string>
    <string name="logout">Logout</string>
    <string name="saved_posts">Saved items</string>
    <string name="tap_to_call_the_seller">Tap to call the seller</string>
    <string name="hold_to_delete_post">Hold to delete item</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="upload">Upload</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="hold_to_save_the_post_offline">Hold to save the item offline</string>
    <string name="contact_phone_number">"Contact phone number: "</string>
    <string name="offline">You\'re offline, please connect to internet or see your saved items under profile page.</string>
    <string name="action_save">Save item offline</string>
    <string name="action_delete">Delete item</string>
    <string name="action_call">Call the seller</string>
    <string name="action_sms">Send a message to the seller</string>
    <string name="cant_delete">You can\'t delete other users items :)</string>
    <string name="enter_item_price">Price</string>
    <string name="item_price">"Item price: "</string>
    <string name="sms_purchase">"Hi, I saw your post on SellIt and I want to purchase "</string>
    <string name="Car">Car</string>
    <string name="RealEstate">Real Estate</string>
    <string name="Furniture">Furniture</string>
    <string name="Cellphone">Cellphone</string>
    <string name="Other">Other</string>
    <string name="Electricity">Electricity</string>
    <string name="item_type">Item type</string>
    <string name="category">"Category: "</string>
    <string name="item_status">"Item status: "</string>
    <string name="set_item_as_sold">Set item as Sold/Active</string>
    <string name="cant_set_sold">You can\'t set other users posts as sold :)</string>
    <string name="already_sold">Sorry, but this item is already sold :)</string>
    <string name="sold">Sold</string>
    <string name="active">Active</string>
    <string name="notice">Please notice</string>
    <string name="might_be_sold">This item might be sold already, since it\'s saved offline.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ask">Ask the seller</string>
    <string name="update">Item updated successfully</string>
    <string name="sure_delete">Are you sure?</string>
    <string name="undone">It cannot be undone.</string>
    <string name="click_to_login">Already have an account? Click to login</string>
    <string name="choose_a_photo">Please choose a photo</string>
    <string name="your_post">That item was listed by you :)</string>
    <string name="skip">Skip</string>
    <string name="cant_change">Note: You won\'t be able to change it later.</string>
    <string name="empty_login">Empty email or password</string>
    <string name="register_empty">Please fill all required fields</string>
    <string name="not_connected">You are not connected to the internet</string>
    <string name="action_remove">Remove saved item</string>

</resources>