<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.ProfileImageFragment"
    android:background="@color/stone">

    <TextView
        android:id="@+id/profile_photo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/profile_photo"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_below="@+id/profile_photo_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:src="@drawable/profile" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_profile_image"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_below="@+id/profile_photo_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:src="@drawable/profile" />

    <Button
        android:id="@+id/upload_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/blue"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_image_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cant_change"
        android:textColor="@color/blue"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/upload_skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/skip"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>