<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="8dp"
    app:contentPadding="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/task_profile_image"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:src="@drawable/profile"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="username"
                android:layout_gravity="start"
                android:id="@+id/mission_username"/>

        </LinearLayout>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:id="@+id/mission_iv"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Mission text"
                android:id="@+id/mission_tv"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mission_desc_tv"
                android:text="Item detailed description"
                android:textSize="18sp"
                android:layout_marginTop="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/category"
                    android:text="@string/category"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mission_type_tv"
                    android:text="Item type"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_phone_tv"
                    android:text="@string/contact_phone_number"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mission_phone_tv"
                    android:text="Phone number"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_price"
                    android:text="@string/item_price"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_price_tv"
                    android:text="Price"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₪"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_status"
                    android:text="@string/item_status"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/active"
                    android:text="Active/Inactive"
                    android:textSize="18sp"
                    android:layout_marginTop="6dp"/>

            </LinearLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="is completed"
                android:id="@+id/mission_cb"
                android:clickable="false"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>